clusters/app.ci/ship-status-dash/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: ship-status
  labels:
    app: dashboard
spec:
  selector:
    app: dashboard
  ports:
    - name: public
      port: 8080
      targetPort: 8080
    - name: protected
      port: 8443
      targetPort: 8443
    - name: mcp
      port: 8090
      targetPort: 8090
    - name: protected-mcp
      port: 9443
      targetPort: 9443
  type: ClusterIP
