clusters/app.ci/ship-status-dash/dashboard/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ship-status-dash
  namespace: ship-status
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
    haproxy.router.openshift.io/timeout: 2m
spec:
  ingressClassName: openshift-default
  tls:
  - hosts:
    - ship-status.ci.openshift.org
    - protected.ship-status.ci.openshift.org
    - mcp.ship-status.ci.openshift.org
    - protected-mcp.ship-status.ci.openshift.org
    secretName: dashboard-tls
  rules:
  - host: ship-status.ci.openshift.org
    http:
      paths:
      - backend:
          service:
            name: dashboard
            port:
              number: 8080
        pathType: ImplementationSpecific
  - host: protected.ship-status.ci.openshift.org
    http:
      paths:
      - backend:
          service:
            name: dashboard
            port:
              number: 8443
        pathType: ImplementationSpecific
  - host: mcp.ship-status.ci.openshift.org
    http:
      paths:
      - backend:
          service:
            name: dashboard
            port:
              number: 8090
        pathType: ImplementationSpecific
  - host: protected-mcp.ship-status.ci.openshift.org
    http:
      paths:
      - backend:
          service:
            name: dashboard
            port:
              number: 9443
        pathType: ImplementationSpecific
